versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/AngularEnergy.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalAngularEnergy
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function AngularEnergyDefaultConst() &
      bind(C, name='AngularEnergyDefaultConst') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function AngularEnergyDefaultConst

!! Create, default
function AngularEnergyDefault() &
      bind(C, name='AngularEnergyDefault') &
      result(handle)
   use iso_c_binding
   implicit none
   type(c_ptr) :: handle
end function AngularEnergyDefault

!! Create, general, const
function AngularEnergyCreateConst( &
   label, &
   productFrame, &
   XYs3d, &
   labelSize, &
   productFrameSize &
) &
      bind(C, name='AngularEnergyCreateConst') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
   type(c_ptr), value :: XYs3d
   type(c_ptr) :: handle
end function AngularEnergyCreateConst

!! Create, general
function AngularEnergyCreate( &
   label, &
   productFrame, &
   XYs3d, &
   labelSize, &
   productFrameSize &
) &
      bind(C, name='AngularEnergyCreate') &
      result(handle)
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
   type(c_ptr), value :: XYs3d
   type(c_ptr) :: handle
end function AngularEnergyCreate

!! Assign
subroutine AngularEnergyAssign(handleLHS, handleRHS) &
      bind(C, name='AngularEnergyAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS, handleRHS
end subroutine AngularEnergyAssign

!! Delete
subroutine AngularEnergyDelete(handle) &
      bind(C, name='AngularEnergyDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine AngularEnergyDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function AngularEnergyRead(handle, filename, filenameSize) &
      bind(C, name='AngularEnergyRead') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function AngularEnergyRead

!! Write to file
function AngularEnergyWrite(handle, filename, filenameSize) &
      bind(C, name='AngularEnergyWrite') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: success
end function AngularEnergyWrite

!! Print to standard output, in our prettyprinting format
function AngularEnergyPrint(handle) &
      bind(C, name='AngularEnergyPrint') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function AngularEnergyPrint

!! Print to standard output, as XML
function AngularEnergyPrintXML(handle) &
      bind(C, name='AngularEnergyPrintXML') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function AngularEnergyPrintXML

!! Print to standard output, as JSON
function AngularEnergyPrintJSON(handle) &
      bind(C, name='AngularEnergyPrintJSON') &
      result(success)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: success
end function AngularEnergyPrintJSON


!! -----------------------------------------------------------------------------
!! Metadatum: label
!! -----------------------------------------------------------------------------

!! Has
function AngularEnergyLabelHas(handle) &
      bind(C, name='AngularEnergyLabelHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function AngularEnergyLabelHas

!! Get
function AngularEnergyLabelGet(handle) &
      bind(C, name='AngularEnergyLabelGet') &
      result(label)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: label
end function AngularEnergyLabelGet

!! Set
subroutine AngularEnergyLabelSet(handle, label, labelSize) &
      bind(C, name='AngularEnergyLabelSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: labelSize
   character(c_char), intent(in) :: label(labelSize)
end subroutine AngularEnergyLabelSet


!! -----------------------------------------------------------------------------
!! Metadatum: productFrame
!! -----------------------------------------------------------------------------

!! Has
function AngularEnergyProductFrameHas(handle) &
      bind(C, name='AngularEnergyProductFrameHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function AngularEnergyProductFrameHas

!! Get
function AngularEnergyProductFrameGet(handle) &
      bind(C, name='AngularEnergyProductFrameGet') &
      result(productFrame)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: productFrame
end function AngularEnergyProductFrameGet

!! Set
subroutine AngularEnergyProductFrameSet(handle, productFrame, productFrameSize) &
      bind(C, name='AngularEnergyProductFrameSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: productFrameSize
   character(c_char), intent(in) :: productFrame(productFrameSize)
end subroutine AngularEnergyProductFrameSet


!! -----------------------------------------------------------------------------
!! Child: XYs3d
!! -----------------------------------------------------------------------------

!! Has
function AngularEnergyXYs3dHas(handle) &
      bind(C, name='AngularEnergyXYs3dHas') &
      result(has)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: has
end function AngularEnergyXYs3dHas

!! Get, const
function AngularEnergyXYs3dGetConst(handle) &
      bind(C, name='AngularEnergyXYs3dGetConst') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function AngularEnergyXYs3dGetConst

!! Get
function AngularEnergyXYs3dGet(handle) &
      bind(C, name='AngularEnergyXYs3dGet') &
      result(resultHandle)
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   type(c_ptr) :: resultHandle
end function AngularEnergyXYs3dGet

!! Set
subroutine AngularEnergyXYs3dSet(handle, fieldHandle) &
      bind(C, name='AngularEnergyXYs3dSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), value :: fieldHandle
end subroutine AngularEnergyXYs3dSet


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalAngularEnergy
